Fixed chrome scrollbar issue

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -80,9 +80,9 @@ header {
     visibility: hidden;
 }
 
-#nav-links {
+/*#nav-links {
     height: 100%;
-}
+}*/
 
 .no-scroll {
     height: 100%;
